--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -3,6 +3,7 @@
 
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 
   background-color: #254455;
   background-image: url("../img/background/background-mobile@1x.jpg");
